Mudança do nome do plugin e alguns ajustes

--- a/ajax/file.html
+++ b/ajax/file.html
@@ -1,1 +1,10 @@
 <h3 class="test">Carregado via ajax</h3>
+<pre>
+	<code>
+		tabs.addTab({
+			title: 'Carregando via Ajax',
+			id: 'ajax',
+			ajaxUrl: 'ajax/file.html'
+		});
+	</code>
+</pre>
