Versão pra mostrar

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <script type="text/javascript" src="bootstrap-tab/bootstrap-tab.js"></script>
 <script type="text/javascript">
 
-var tabs = $('#tabs').TAB().addTab({title:'Home',text:'Bem vindo'});
+var tabs = $('#tabs').TAB().addTab({title:'Home',text:'Bem vindo',closable: false});
 
 $('#btnHtml').click(function(){
 	tabs.addTab({
