--- a/ajax/file.html
+++ b/ajax/file.html
@@ -1,4 +1,5 @@
 <h3 class="test">Carregado via ajax</h3>
+<button class="btn btn-warning" id="closeThis">Fechar esta</button>
 <pre>
 	<code>
 		tabs.addTab({
@@ -8,3 +9,9 @@
 		});
 	</code>
 </pre>
+<script type="text/javascript">
+$('#closeThis').click(function(event) {
+	$('#tabs').bootstrapDynamicTabs().closeById('ajax');
+});
+
+</script>
